syntax = "proto3";

import "google/protobuf/descriptor.proto";

package hivemapper.types.v1;


// Define a custom option
extend google.protobuf.MessageOptions {
  bool is_table = 77701;
}

message Instruction {
  option (is_table) = true;

  oneof Item {
    Mint mint = 1;
    Burn burn = 2;
    Transfer transfer = 3;
    InitializedAccount initialized_account = 4;
  }
}

message Transaction {
  option (is_table) = true;
  string trx_hash = 1;
  repeated Instruction instructions = 2;
}

message Transactions {
  repeated Transaction transactions = 3;
}

message Transfer {
  option (is_table) = true;

  string from = 2;
  string to = 3;
  double amount = 4;
}

message Mint {
  option (is_table) = true;

  enum Type {
    UNSET = 0;
    MINT = 1;
    REGULAR_DRIVER = 2;
    NO_SPLIT = 3;
    AI_TRAINER = 4;
    OPERATIONAL = 5;
    REWARD = 6;
    FLEET_MANAGER = 7;
    FLEET_DRIVER = 8;
    MAP_CONSUMPTION = 9;
  }

  string to = 2;
  double amount = 3;

  Type type = 4;
}

message Burn {
  option (is_table) = true;

  enum Type {
    UNSET = 0;
    BURN = 1;
    MAP_CREATE = 2;
  }

  string from = 2;
  double amount = 3;
  Type type = 4;
}

message InitializedAccount {
  option (is_table) = true;

  string account = 1;
  string mint = 2;
  string owner = 3;
}